--- a/index.html
+++ b/index.html
@@ -3,124 +3,133 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- fonts  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
     <!-- styles  -->
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/main.css" />
     <!-- title  -->
     <title>test</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="css/swiper-bundle.min.css"/>
   </head>
   <body>
     <section class="navigated-sections" id="navigated-sections">
-        <div class="navigated-sections__nav">
-          <button class="navigated-sections__nav-button">
-            <span>about</span>
-          </button>
-          <button class="navigated-sections__nav-button">
-            <span>location</span>
-          </button>
-          <button class="navigated-sections__nav-button">
-            <span>project materials</span>
-          </button>
-          <button class="navigated-sections__nav-button">
-            <span>interiors and exteriors</span>
-          </button>
-          <button class="navigated-sections__nav-button">
-            <span>unit types</span>
-          </button>
-          <button class="navigated-sections__nav-button">
-            <span>virtual tours</span>
-          </button>
-          <button class="navigated-sections__nav-button">
-            <span>project updates</span>
-          </button>
-          <button class="navigated-sections__nav-button">
-            <span>register</span>
-          </button>
-        </div>
-        <div class="navigated-sections__wrapper">
-          <div class="navigated-sections__contact">
-            <div class="navigated-sections__contact-info">
-              <h2>Ready for a new living <span>Experience?</span></h2>
-              <p>Register your interest now for more information</p>
-            </div>
-            <div class="navigated-sections__contact-form">
-              <form action="">
-                <div class="row">
-                  <div class="col-md-12">
-                    <div class="form-group">
-                      <input type="text" placeholder="Full Name" />
-                    </div>
-                  </div>
-                  <div class="col-md-12">
-                    <div class="form-group">
-                      <input type="email" placeholder="Email" />
-                    </div>
-                  </div>
-                  <div class="col-md-6">
-                    <div class="form-group">
-                      <select name="" id="">
-                        <option value="">Select Country</option>
-                        <option value="">Egypt (+20)</option>
-                        <option value="">United Arab Emirates (2)</option>
-                        <option value="">United States (1)</option>
-                        <option value="">United Kingdom (1)</option>
-                        <option value="">Canada (1)</option>
-                        <option value="">Australia (1)</option>
-                        <option value="">New Zealand (1)</option>
-                      </select>
-                    </div>
-                  </div>
-                  <div class="col-md-6">
-                    <div class="form-group">
-                      <input type="text" placeholder="Phone" />
-                    </div>
-                  </div>
-                  <div class="col-md-12">
-                    <div class="form-group">
-                      <select name="" id="">
-                        <option value="">Enquire type</option>
-                        <option value="">Clint</option>
-                        <option value="">Agent</option>
-                        <option value="">Media</option>
-                        <option value="">Other</option>
-                      </select>
-                    </div>
-                  </div>
-                  <div class="col-md-12">
-                    <div class="form-group">
-                      <textarea name="" id="" cols="30" rows="10"></textarea>
-                    </div>
-                  </div>
-                  <div class="col-md-12">
-                    <div class="form-group">
-                      <input type="checkbox" name="" id="" />
-                      <label for="">I agree to receive commercial electronic messages.</label>
-                    </div>
-                  </div>
-                  <div class="col-md-12">
-                    <div class="form-group">
-                      <input type="checkbox" name="" id="" />
-                      <label for="">By using this form, you accept the <a href="#">Website Cookies</a> and <a href="#">Privacy Policy</a></label>
-                    </div>
-                  </div>
-                </div>
-                <button type="submit" class="send-button">send</button>
-              </form>
+      <div class="navigated-sections__nav">
+        <button class="navigated-sections__nav-button" data-target="about">
+          <span>about</span>
+        </button>
+        <button class="navigated-sections__nav-button" data-target="location">
+          <span>location</span>
+        </button>
+        <button
+          class="navigated-sections__nav-button"
+          data-target="project-materials   "
+        >
+          <span>project materials</span>
+        </button>
+        <button
+          class="navigated-sections__nav-button"
+          data-target="interiors-and-exteriors"
+        >
+          <span>interiors and exteriors</span>
+        </button>
+        <button class="navigated-sections__nav-button" data-target="unit-types">
+          <span>unit types</span>
+        </button>
+        <button
+          class="navigated-sections__nav-button"
+          data-target="virtual-tours"
+        >
+          <span>virtual tours</span>
+        </button>
+        <button
+          class="navigated-sections__nav-button"
+          data-target="project-updates"
+        >
+          <span>project updates</span>
+        </button>
+        <button class="navigated-sections__nav-button" data-target="register">
+          <span>register</span>
+        </button>
+      </div>
+      <div class="navigated-sections__wrapper">
+        <section
+          class="navigated-sections__section navigated-sections__section--about"
+        >
+          <div class="container">
+            <div
+              class="navigated-sections__section-content navigated-sections__section-content--about"
+            >
+              <img
+                src="/images/about-logo.png"
+                alt="about"
+                width="200px"
+                height="200px"
+              />
+              <div>
+                <h4 class="navigated-sections__section--about-title">
+                  Montenapoleone Egypt – A Touch of Italian Elegance in
+                  Mostakbal City
+                </h4>
+                <p class="navigated-sections__section--about-description">
+                  <span>
+                    In partnership with Al Ahly Sabbour, Reportage Egypt proudly
+                    introduces Montenapoleone Compound in the heart of Mostakbal
+                    City, New Cairo. Inspired by Milan’s iconic fashion street,
+                    the project brings Italian charm to Egyptian lands.
+                  </span>
+                  <span>
+                    Spanning 465,000 m², Montenapoleone Egypt features 62% open
+                    spaces and offers a selection of 374 townhouses and
+                    residential buildings with simplex and duplex units ranging
+                    from 1 to 4 bedrooms, including private gardens for select
+                    units.
+                  </span>
+                  <span>
+                    With modern facades, contemporary designs, and high-quality
+                    finishes, Montenapoleone Egypt sets a new standard for
+                    luxurious living, seamlessly blending Italian beauty with
+                    modern functionality.
+                  </span>
+                </p>
+              </div>
             </div>
           </div>
-        </div>
+        </section>
+        <section
+          class="navigated-sections__section navigated-sections__section--location"
+        >
+          <div
+            class="navigated_sections__section-content--location-overlay"
+          ></div>
+          <div
+            class="navigated-sections__section-content navigated-sections__section-content--location"
+          >
+            <div class="container">
+              <h4
+                class="navigated-sections__section--title navigated-sections__section--location-title"
+              >
+                Location
+              </h4>
+            </div>
+            <div>
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d13704.264891816243!2d31.340620416422993!3d30.078302639609635!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sar!2seg!4v1746533788856!5m2!1sar!2seg"
+                width="600"
+                height="800"
+                style="border: 0"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+              ></iframe>
+            </div>
+          </div>
+        </section>
+      </div>
     </section>
-
-
-
-
-
-    
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/jquery.min.js"></script>
-    <script src="js/swiper-bundle.min.js"></script>
   </body>
 </html>
