--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <!-- styles  -->
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/main.css" />
+    <!-- Swiper CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
     <!-- title  -->
     <title>test</title>
   </head>
@@ -79,7 +84,7 @@
                   <span>
                     In partnership with Al Ahly Sabbour, Reportage Egypt proudly
                     introduces Montenapoleone Compound in the heart of Mostakbal
-                    City, New Cairo. Inspired by Milan’s iconic fashion street,
+                    City, New Cairo. Inspired by Milan's iconic fashion street,
                     the project brings Italian charm to Egyptian lands.
                   </span>
                   <span>
@@ -103,12 +108,15 @@
         <section
           class="navigated-sections__section navigated-sections__section--location"
         >
-          <div
+          <!-- <div
             class="navigated_sections__section-content--location-overlay"
-          ></div>
+          ></div> -->
           <div
             class="navigated-sections__section-content navigated-sections__section-content--location"
           >
+            <div
+              class="navigated_sections__section-content--location-overlay"
+            ></div>
             <div class="container">
               <h4
                 class="navigated-sections__section--title navigated-sections__section--location-title"
@@ -120,16 +128,219 @@
               <iframe
                 src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d13704.264891816243!2d31.340620416422993!3d30.078302639609635!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sar!2seg!4v1746533788856!5m2!1sar!2seg"
                 width="600"
-                height="800"
+                height="600"
                 style="border: 0"
                 allowfullscreen=""
                 loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"
               ></iframe>
             </div>
+            <div class="container">
+              <div class="navigated-sections__section-content--location-slider">
+                <div>
+                  <h4>get closer to</h4>
+                  <p>The city's attractions at your doorstep</p>
+                </div>
+                <div class="swiper location-swiper">
+                  <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                      <div
+                        class="navigated-sections__section-content--location-card"
+                      >
+                        <div>
+                          <img
+                            src="images/buildings.svg"
+                            alt="location-card-1"
+                            height="32px"
+                            width="32px"
+                          />
+                          <h2>20</h2>
+                          <h6>Min</h6>
+                        </div>
+                        <div>El Rehab City</div>
+                      </div>
+                    </div>
+                    <div class="swiper-slide">
+                      <div
+                        class="navigated-sections__section-content--location-card"
+                      >
+                        <div>
+                          <img
+                            src="images/buildings.svg"
+                            alt="location-card-2"
+                            height="32px"
+                            width="32px"
+                          />
+                          <h2>15</h2>
+                          <h6>Min</h6>
+                        </div>
+                        <div>New Cairo</div>
+                      </div>
+                    </div>
+                    <div class="swiper-slide">
+                      <div
+                        class="navigated-sections__section-content--location-card"
+                      >
+                        <div>
+                          <img
+                            src="images/buildings.svg"
+                            alt="location-card-3"
+                            height="32px"
+                            width="32px"
+                          />
+                          <h2>10</h2>
+                          <h6>Min</h6>
+                        </div>
+                        <div>American University</div>
+                      </div>
+                    </div>
+                    <div class="swiper-slide">
+                      <div
+                        class="navigated-sections__section-content--location-card"
+                      >
+                        <div>
+                          <img
+                            src="images/buildings.svg"
+                            alt="location-card-4"
+                            height="32px"
+                            width="32px"
+                          />
+                          <h2>25</h2>
+                          <h6>Min</h6>
+                        </div>
+                        <div>Cairo Festival City</div>
+                      </div>
+                    </div>
+                    <div class="swiper-slide">
+                      <div
+                        class="navigated-sections__section-content--location-card"
+                      >
+                        <div>
+                          <img
+                            src="images/buildings.svg"
+                            alt="location-card-5"
+                            height="32px"
+                            width="32px"
+                          />
+                          <h2>30</h2>
+                          <h6>Min</h6>
+                        </div>
+                        <div>Downtown Cairo</div>
+                      </div>
+                    </div>
+                    <div class="swiper-slide">
+                      <div
+                        class="navigated-sections__section-content--location-card"
+                      >
+                        <div>
+                          <img
+                            src="images/buildings.svg"
+                            alt="location-card-6"
+                            height="32px"
+                            width="32px"
+                          />
+                          <h2>18</h2>
+                          <h6>Min</h6>
+                        </div>
+                        <div>Nasr City</div>
+                      </div>
+                    </div>
+                    <div class="swiper-slide">
+                      <div
+                        class="navigated-sections__section-content--location-card"
+                      >
+                        <div>
+                          <img
+                            src="images/buildings.svg"
+                            alt="location-card-7"
+                            height="32px"
+                            width="32px"
+                          />
+                          <h2>22</h2>
+                          <h6>Min</h6>
+                        </div>
+                        <div>Heliopolis</div>
+                      </div>
+                    </div>
+                    <div class="swiper-slide">
+                      <div
+                        class="navigated-sections__section-content--location-card"
+                      >
+                        <div>
+                          <img
+                            src="images/buildings.svg"
+                            alt="location-card-8"
+                            height="32px"
+                            width="32px"
+                          />
+                          <h2>35</h2>
+                          <h6>Min</h6>
+                        </div>
+                        <div>Maadi</div>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- Add Navigation -->
+                  <div class="location-swiper-button-next swiper-button-next">
+                    <svg
+                      version="1.1"
+                      xmlns="http://www.w3.org/2000/svg"
+                      xmlns:xlink="http://www.w3.org/1999/xlink"
+                      x="0px"
+                      y="0px"
+                      viewBox="0 0 40.693 29.578"
+                      enable-background="new 0 0 40.693 29.578"
+                      xml:space="preserve"
+                      style="transform: scaleX(-1)"
+                    >
+                      <g id="Layer_4">
+                        <path
+                          fill="#FAC25A"
+                          d="M2.931,15.076c0.038,0.092,0.093,0.175,0.162,0.244l11.258,11.258c0.293,0.293,0.768,0.293,1.061,0s0.293-0.768,0-1.061l-9.978-9.978h31.635c0.414,0,0.75-0.336,0.75-0.75s-0.336-0.75-0.75-0.75H5.434l9.978-9.978c0.293-0.293,0.293-0.768,0-1.061c-0.146-0.146-0.338-0.22-0.53-0.22s-0.384,0.073-0.53,0.22L3.093,14.259c-0.069,0.069-0.124,0.152-0.162,0.244C2.855,14.686,2.855,14.892,2.931,15.076z"
+                        />
+                      </g>
+                    </svg>
+                  </div>
+                  <div class="location-swiper-button-prev swiper-button-prev">
+                    <svg
+                      version="1.1"
+                      xmlns="http://www.w3.org/2000/svg"
+                      xmlns:xlink="http://www.w3.org/1999/xlink"
+                      x="0px"
+                      y="0px"
+                      viewBox="0 0 40.693 29.578"
+                      enable-background="new 0 0 40.693 29.578"
+                      xml:space="preserve"
+                    >
+                      <g id="Layer_4">
+                        <path
+                          fill="#FAC25A"
+                          d="M2.931,15.076c0.038,0.092,0.093,0.175,0.162,0.244l11.258,11.258c0.293,0.293,0.768,0.293,1.061,0s0.293-0.768,0-1.061l-9.978-9.978h31.635c0.414,0,0.75-0.336,0.75-0.75s-0.336-0.75-0.75-0.75H5.434l9.978-9.978c0.293-0.293,0.293-0.768,0-1.061c-0.146-0.146-0.338-0.22-0.53-0.22s-0.384,0.073-0.53,0.22L3.093,14.259c-0.069,0.069-0.124,0.152-0.162,0.244C2.855,14.686,2.855,14.892,2.931,15.076z"
+                        />
+                      </g>
+                    </svg>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </section>
       </div>
     </section>
+    <!-- Swiper JS -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script>
+      var swiper = new Swiper(".location-swiper", {
+        slidesPerView: 3,
+        spaceBetween: 32,
+        loop: true,
+        navigation: {
+          nextEl: ".location-swiper-button-next",
+          prevEl: ".location-swiper-button-prev",
+        },
+        // Remove pagination
+        // Always 3 slides per view
+      });
+    </script>
   </body>
 </html>
