--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <!-- Swiper CSS -->
     <link rel="stylesheet" href="css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- title  -->
     <title>test</title>
   </head>
@@ -325,6 +327,242 @@
             </div>
           </div>
         </section>
+        <section class="navigated-sections__section--tab">
+          <div class="container">
+            <div class="row">
+
+              <div class="col-md-12">
+                <h2>Unit Types</h2>
+              </div>
+              <!-- Tab Links -->
+              <div class="col-md-4">
+                <ul class="nav flex-column nav-pills navigated-sections__section--tab-links" id="myTab" role="tablist">
+                  <li class="nav-item" role="presentation">
+                    <button class="nav-link active" id="OneBedroom-tab" data-bs-toggle="pill" data-bs-target="#OneBedroom" type="button" role="tab" aria-controls="OneBedroom" aria-selected="true">
+                      One Bedroom
+                    </button>
+                  </li>
+                  <li class="nav-item" role="presentation">
+                    <button class="nav-link" id="OneBedroomJunior-tab" data-bs-toggle="pill" data-bs-target="#OneBedroomJunior" type="button" role="tab" aria-controls="OneBedroomJunior" aria-selected="false">
+                      One Bedroom - Junior
+                    </button>
+                  </li>
+                  <li class="nav-item" role="presentation">
+                    <button class="nav-link" id="TwoBedroom-tab" data-bs-toggle="pill" data-bs-target="#TwoBedroom" type="button" role="tab" aria-controls="TwoBedroom" aria-selected="false">
+                      Two Bedroom
+                    </button>
+                  </li>
+                  <li class="nav-item" role="presentation">
+                    <button class="nav-link" id="TwoBedroomJunior-tab" data-bs-toggle="pill" data-bs-target="#TwoBedroomJunior" type="button" role="tab" aria-controls="TwoBedroomJunior" aria-selected="false">
+                      Two Bedrooms - Junior
+                    </button>
+                  </li>
+                  <li class="nav-item" role="presentation">
+                    <button class="nav-link" id="ThreeBedroom-tab" data-bs-toggle="pill" data-bs-target="#ThreeBedroom" type="button" role="tab" aria-controls="ThreeBedroom" aria-selected="false">
+                      Three Bedroom
+                    </button>
+                  </li>
+                  <li class="nav-item" role="presentation">
+                    <button class="nav-link" id="ThreeBedroomJunior-tab" data-bs-toggle="pill" data-bs-target="#ThreeBedroomJunior" type="button" role="tab" aria-controls="ThreeBedroomJunior" aria-selected="false">
+                      Three Bedrooms - Junior
+                    </button>
+                  </li>
+                  <li class="nav-item" role="presentation">
+                    <button class="nav-link" id="FourBedroom-tab" data-bs-toggle="pill" data-bs-target="#FourBedroom" type="button" role="tab" aria-controls="FourBedroom" aria-selected="false">
+                      Four Bedrooms
+                    </button>
+                  </li>
+                </ul>
+              </div>
+
+              <!-- Tab Content -->
+              <div class="col-md-8">
+                <div class="tab-content" id="myTabContent">
+                  <!-- Tab 1 with nested tabs -->
+                  <div class="tab-pane fade show active" id="OneBedroom" role="tabpanel" aria-labelledby="OneBedroom-tab">
+                    <!-- Nested Tabs for Tab 1 -->
+                    <ul class="nav nav-tabs navigated-sections__section--tab-nested-tabs" id="nestedTab1" role="tablist">
+                      <li class="nav-item" role="presentation">
+                        <button class="nav-link active" id="nested1-1-tab" data-bs-toggle="tab" data-bs-target="#nested1-1" type="button" role="tab" aria-controls="nested1-1" aria-selected="true">TYPE A</button>
+                      </li>
+                      <li class="nav-item ms-auto d-flex align-items-center">
+                        <button class="tab-arrow-prev" type="button" aria-label="Previous Tab">&#8592;</button>
+                        <button class="tab-arrow-next" type="button" aria-label="Next Tab">&#8594;</button>
+                      </li>
+                    </ul>
+                    <div class="tab-content" id="nestedTab1Content">
+                      <div class="tab-pane fade show active" id="nested1-1" role="tabpanel" aria-labelledby="nested1-1-tab">
+                        <img src="images/TinEMxVTgmY4nylkjti16KkzBiHYK9YrEihpPI5X.webp" alt="Tab 1 Image" class="img-fluid">
+                      </div>
+                    </div>
+                  </div>
+
+                  <!-- Tab 2 with nested tabs -->
+                  <div class="tab-pane fade" id="OneBedroomJunior" role="tabpanel" aria-labelledby="OneBedroomJunior-tab">
+                    <!-- Nested Tabs for Tab 2 -->
+                    <ul class="nav nav-tabs" id="nestedTab2" role="tablist">
+                      <li class="nav-item" role="presentation">
+                        <button class="nav-link active" id="nested2-1-tab" data-bs-toggle="tab" data-bs-target="#nested2-1" type="button" role="tab" aria-controls="nested2-1" aria-selected="true">TYPE A</button>
+                      </li>
+                      <li class="nav-item" role="presentation">
+                        <button class="nav-link" id="nested2-2-tab" data-bs-toggle="tab" data-bs-target="#nested2-2" type="button" role="tab" aria-controls="nested2-2" aria-selected="false">TYPE B</button>
+                      </li>
+                      <li class="nav-item ms-auto d-flex align-items-center">
+                        <button class="tab-arrow-prev" type="button" aria-label="Previous Tab">&#8592;</button>
+                        <button class="tab-arrow-next" type="button" aria-label="Next Tab">&#8594;</button>
+                      </li>
+                    </ul>
+                    <div class="tab-content" id="nestedTab2Content">
+                      <div class="tab-pane fade show active" id="nested2-1" role="tabpanel" aria-labelledby="nested2-1-tab">
+                        <img src="images/TinEMxVTgmY4nylkjti16KkzBiHYK9YrEihpPI5X.webp" alt="Tab 2 Image" class="img-fluid">
+                      </div>
+                      <div class="tab-pane fade" id="nested2-2" role="tabpanel" aria-labelledby="nested2-2-tab">
+                        <img src="images/TinEMxVTgmY4nylkjti16KkzBiHYK9YrEihpPI5X.webp" alt="Tab 2 Image" class="img-fluid">
+                      </div>
+                    </div>
+                  </div>
+
+                  <!-- Tab 3 with nested tabs -->
+                  <div class="tab-pane fade" id="TwoBedroom" role="tabpanel" aria-labelledby="TwoBedroom-tab">
+                    <!-- Nested Tabs for Tab 3 -->
+                    <ul class="nav nav-tabs" id="nestedTab3" role="tablist">
+                      <li class="nav-item" role="presentation">
+                        <button class="nav-link active" id="nested3-1-tab" data-bs-toggle="tab" data-bs-target="#nested3-1" type="button" role="tab" aria-controls="nested3-1" aria-selected="true">TYPE A</button>
+                      </li>
+                      <li class="nav-item" role="presentation">
+                        <button class="nav-link" id="nested3-2-tab" data-bs-toggle="tab" data-bs-target="#nested3-2" type="button" role="tab" aria-controls="nested3-2" aria-selected="false">TYPE B</button>
+                      </li>
+                      <li class="nav-item" role="presentation">
+                        <button class="nav-link" id="nested3-3-tab" data-bs-toggle="tab" data-bs-target="#nested3-3" type="button" role="tab" aria-controls="nested3-3" aria-selected="false">TYPE C</button>
+                      </li>
+                      <li class="nav-item" role="presentation">
+                        <button class="nav-link" id="nested3-4-tab" data-bs-toggle="tab" data-bs-target="#nested3-4" type="button" role="tab" aria-controls="nested3-4" aria-selected="false">TYPE D</button>
+                      </li>
+                      <li class="nav-item ms-auto d-flex align-items-center">
+                        <button class="tab-arrow-prev" type="button" aria-label="Previous Tab">&#8592;</button>
+                        <button class="tab-arrow-next" type="button" aria-label="Next Tab">&#8594;</button>
+                      </li>
+                    </ul>
+                    <div class="tab-content" id="nestedTab3Content">
+                      <div class="tab-pane fade show active" id="nested3-1" role="tabpanel" aria-labelledby="nested3-1-tab">
+                        <img src="images/TinEMxVTgmY4nylkjti16KkzBiHYK9YrEihpPI5X.webp" alt="Tab 3 Image" class="img-fluid">
+                      </div>
+                      <div class="tab-pane fade" id="nested3-2" role="tabpanel" aria-labelledby="nested3-2-tab">
+                        <img src="images/TinEMxVTgmY4nylkjti16KkzBiHYK9YrEihpPI5X.webp" alt="Tab 3 Image" class="img-fluid">
+                      </div>
+                      <div class="tab-pane fade" id="nested3-3" role="tabpanel" aria-labelledby="nested3-3-tab">
+                        <img src="images/TinEMxVTgmY4nylkjti16KkzBiHYK9YrEihpPI5X.webp" alt="Tab 3 Image" class="img-fluid">
+                      </div>
+                      <div class="tab-pane fade" id="nested3-4" role="tabpanel" aria-labelledby="nested3-4-tab">
+                        <img src="images/TinEMxVTgmY4nylkjti16KkzBiHYK9YrEihpPI5X.webp" alt="Tab 3 Image" class="img-fluid">
+                      </div>
+                    </div>
+                  </div>
+
+                  <!-- Tab 4 with nested tabs -->
+                  <div class="tab-pane fade" id="TwoBedroomJunior" role="tabpanel" aria-labelledby="TwoBedroomJunior-tab">
+                    <!-- Nested Tabs for Tab 4 -->  
+                    <ul class="nav nav-tabs" id="nestedTab4" role="tablist">
+                      <li class="nav-item" role="presentation">
+                        <button class="nav-link active" id="nested4-1-tab" data-bs-toggle="tab" data-bs-target="#nested4-1" type="button" role="tab" aria-controls="nested4-1" aria-selected="true">TYPE A</button>
+                      </li>
+                      <li class="nav-item" role="presentation"></li>
+                        <button class="nav-link" id="nested4-2-tab" data-bs-toggle="tab" data-bs-target="#nested4-2" type="button" role="tab" aria-controls="nested4-2" aria-selected="false">TYPE B</button>
+                      </li>
+                      <li class="nav-item ms-auto d-flex align-items-center">
+                        <button class="tab-arrow-prev" type="button" aria-label="Previous Tab">&#8592;</button>
+                        <button class="tab-arrow-next" type="button" aria-label="Next Tab">&#8594;</button>
+                      </li>
+                    </ul>
+                    <div class="tab-content" id="nestedTab4Content">
+                      <div class="tab-pane fade show active" id="nested4-1" role="tabpanel" aria-labelledby="nested4-1-tab">
+                        <img src="images/TinEMxVTgmY4nylkjti16KkzBiHYK9YrEihpPI5X.webp" alt="Tab 4 Image" class="img-fluid">
+                      </div>
+                      <div class="tab-pane fade" id="nested4-2" role="tabpanel" aria-labelledby="nested4-2-tab">
+                        <img src="images/TinEMxVTgmY4nylkjti16KkzBiHYK9YrEihpPI5X.webp" alt="Tab 4 Image" class="img-fluid">
+                      </div>
+                    </div>
+                  </div>
+
+                  <!-- Tab 5 with nested tabs -->
+                  <div class="tab-pane fade" id="ThreeBedroom" role="tabpanel" aria-labelledby="ThreeBedroom-tab">
+                    <!-- Nested Tabs for Tab 5 -->  
+                    <ul class="nav nav-tabs" id="nestedTab5" role="tablist">
+                      <li class="nav-item" role="presentation">
+                        <button class="nav-link active" id="nested5-1-tab" data-bs-toggle="tab" data-bs-target="#nested5-1" type="button" role="tab" aria-controls="nested5-1" aria-selected="true">TYPE A</button>
+                      </li>
+                      <li class="nav-item" role="presentation"></li>
+                        <button class="nav-link" id="nested5-2-tab" data-bs-toggle="tab" data-bs-target="#nested5-2" type="button" role="tab" aria-controls="nested5-2" aria-selected="false">TYPE B</button>
+                      </li>
+                      <li class="nav-item ms-auto d-flex align-items-center">
+                        <button class="tab-arrow-prev" type="button" aria-label="Previous Tab">&#8592;</button>
+                        <button class="tab-arrow-next" type="button" aria-label="Next Tab">&#8594;</button>
+                      </li>
+                    </ul>
+                    <div class="tab-content" id="nestedTab5Content">
+                      <div class="tab-pane fade show active" id="nested5-1" role="tabpanel" aria-labelledby="nested5-1-tab">
+                        <img src="images/TinEMxVTgmY4nylkjti16KkzBiHYK9YrEihpPI5X.webp" alt="Tab 5 Image" class="img-fluid">
+                      </div>
+                      <div class="tab-pane fade" id="nested5-2" role="tabpanel" aria-labelledby="nested5-2-tab">
+                        <img src="images/TinEMxVTgmY4nylkjti16KkzBiHYK9YrEihpPI5X.webp" alt="Tab 5 Image" class="img-fluid">
+                      </div>
+                    </div>
+                  </div>
+
+                  <!-- Tab 6 with nested tabs -->
+                  <div class="tab-pane fade" id="ThreeBedroomJunior" role="tabpanel" aria-labelledby="ThreeBedroomJunior-tab">
+                    <!-- Nested Tabs for Tab 6 -->  
+                    <ul class="nav nav-tabs" id="nestedTab6" role="tablist">
+                      <li class="nav-item" role="presentation">
+                        <button class="nav-link active" id="nested6-1-tab" data-bs-toggle="tab" data-bs-target="#nested6-1" type="button" role="tab" aria-controls="nested6-1" aria-selected="true">TYPE A</button>
+                      </li>
+                      <li class="nav-item" role="presentation"></li>
+                        <button class="nav-link" id="nested6-2-tab" data-bs-toggle="tab" data-bs-target="#nested6-2" type="button" role="tab" aria-controls="nested6-2" aria-selected="false">TYPE B</button>
+                      </li>
+                      <li class="nav-item ms-auto d-flex align-items-center">
+                        <button class="tab-arrow-prev" type="button" aria-label="Previous Tab">&#8592;</button>
+                        <button class="tab-arrow-next" type="button" aria-label="Next Tab">&#8594;</button>
+                      </li>
+                    </ul>
+                    <div class="tab-content" id="nestedTab6Content">
+                      <div class="tab-pane fade show active" id="nested6-1" role="tabpanel" aria-labelledby="nested6-1-tab">
+                        <img src="images/TinEMxVTgmY4nylkjti16KkzBiHYK9YrEihpPI5X.webp" alt="Tab 6 Image" class="img-fluid">
+                      </div>
+                      <div class="tab-pane fade" id="nested6-2" role="tabpanel" aria-labelledby="nested6-2-tab">
+                        <img src="images/TinEMxVTgmY4nylkjti16KkzBiHYK9YrEihpPI5X.webp" alt="Tab 6 Image" class="img-fluid">
+                      </div>
+                    </div>
+                  </div>
+
+                  <!-- Tab 7 with nested tabs -->
+                  <div class="tab-pane fade" id="FourBedroom" role="tabpanel" aria-labelledby="FourBedroom-tab">  
+                    <!-- Nested Tabs for Tab 7 -->  
+                    <ul class="nav nav-tabs" id="nestedTab7" role="tablist"> 
+                      <li class="nav-item" role="presentation"></li>
+                        <button class="nav-link" id="nested7-1-tab" data-bs-toggle="tab" data-bs-target="#nested7-1" type="button" role="tab" aria-controls="nested7-1" aria-selected="false">TYPE A</button>
+                      </li>
+                      <li class="nav-item" role="presentation"></li>
+                        <button class="nav-link" id="nested7-2-tab" data-bs-toggle="tab" data-bs-target="#nested7-2" type="button" role="tab" aria-controls="nested7-2" aria-selected="false">TYPE B</button>
+                      </li>
+                      <li class="nav-item ms-auto d-flex align-items-center">
+                        <button class="tab-arrow-prev" type="button" aria-label="Previous Tab">&#8592;</button>
+                        <button class="tab-arrow-next" type="button" aria-label="Next Tab">&#8594;</button>
+                      </li>
+                    </ul>
+                    <div class="tab-content" id="nestedTab7Content"> 
+                      <div class="tab-pane fade show active" id="nested7-1" role="tabpanel" aria-labelledby="nested7-1-tab">
+                        <img src="images/TinEMxVTgmY4nylkjti16KkzBiHYK9YrEihpPI5X.webp" alt="Tab 7 Image" class="img-fluid">
+                      </div>
+                      <div class="tab-pane fade" id="nested7-2" role="tabpanel" aria-labelledby="nested7-2-tab">
+                        <img src="images/TinEMxVTgmY4nylkjti16KkzBiHYK9YrEihpPI5X.webp" alt="Tab 7 Image" class="img-fluid">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
         <section class="navigated-sections__section navigated-sections__section--project-materials">
           <div class="container">
             <div class="row">
@@ -442,17 +680,8 @@
     <!-- Swiper JS -->
     <script src="js/bootstrap.min.js"></script>
     <script src="js/swiper-bundle.min.js"></script>
-    <script>
-      var swiper = new Swiper(".location-swiper", {
-        slidesPerView: 3,
-        spaceBetween: 32,
-        loop: true,
-        navigation: {
-          nextEl: ".location-swiper-button-next",
-          prevEl: ".location-swiper-button-prev",
-        },
-      });
-    </script>
+    <!-- Bootstrap Bundle JS (includes Popper) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Modal Structure -->
     <div id="videoModal" class="modal-video">
       <div class="modal-content">
@@ -463,5 +692,6 @@
 
 
     <script src="js/web.js"></script>
+    
   </body>
 </html>
