--- a/index.html
+++ b/index.html
@@ -327,6 +327,108 @@
             </div>
           </div>
         </section>
+        <section class="navigated-sections__section--project-materials">
+          <div class="container">
+            <h2>Project Materials</h2>
+            <div class="card-Amenities">
+              <a href="myfile.pdf" class="card-Amenities__card">
+                <div class="card-Amenities__card-image">
+                  <img src="images/bos.svg" alt="Amenities-1">
+                </div>
+                <div class="card-Amenities__card-content">
+                  <h3>Brochure</h3>
+                </div>
+              </a>
+              <a href="myfile.pdf" class="card-Amenities__card">
+                <div class="card-Amenities__card-image">
+                  <img src="images/type.svg" alt="Amenities-2">
+                </div>
+                <div class="card-Amenities__card-content">
+                  <h3>Unit Types Sheet</h3>
+                </div>
+              </a>
+              <a href="myfile.pdf" class="card-Amenities__card">
+                <div class="card-Amenities__card-image">
+                  <img src="images/rie.svg" alt="Amenities-3">
+                </div>
+                <div class="card-Amenities__card-content">
+                  <h3>Trifold</h3>
+                </div>
+              </a>
+              <a href="myfile.pdf" class="card-Amenities__card">
+                <div class="card-Amenities__card-image">
+                  <img src="images/floor.svg" alt="Amenities-1">
+                </div>
+                <div class="card-Amenities__card-content">
+                  <h3>Floor Plan</h3>
+                </div>
+              </a>
+              <a href="myfile.pdf" class="card-Amenities__card">
+                <div class="card-Amenities__card-image">
+                  <img src="images/master.svg" alt="Amenities-2">
+                </div>
+                <div class="card-Amenities__card-content">
+                  <h3>Master Plan</h3>
+                </div>
+              </a>
+            </div>
+          </div>
+        </section>
+        <section class="navigated-sections__section--project-amenities">
+          <div class="container">
+            <h2>Amenities</h2>
+            <div class="card-Amenities">
+              <div class="card-Amenities__card">
+                <div class="card-Amenities__card-image">
+                  <img src="images/pool.svg" alt="Amenities-1">
+                </div>
+                <div class="card-Amenities__card-content">
+                  <h3>Swimming Pool</h3>
+                </div>
+              </div>
+              <div class="card-Amenities__card">
+                <div class="card-Amenities__card-image">
+                  <img src="images/gym.svg" alt="Amenities-2">
+                </div>
+                <div class="card-Amenities__card-content">
+                  <h3>Gym</h3>
+                </div>
+              </div>
+              <div class="card-Amenities__card">
+                <div class="card-Amenities__card-image">
+                  <img src="images/play.svg" alt="Amenities-3">
+                </div>
+                <div class="card-Amenities__card-content">
+                  <h3>Playground</h3>
+                </div>
+              </div>
+              <div class="card-Amenities__card">
+                <div class="card-Amenities__card-image">
+                  <img src="images/football.svg" alt="Amenities-1">
+                </div>
+                <div class="card-Amenities__card-content">
+                  <h3>Football Court</h3>
+                </div>
+              </div>
+              <div class="card-Amenities__card">
+                <div class="card-Amenities__card-image">
+                  <img src="images/shop.svg" alt="Amenities-2">
+                </div>
+                <div class="card-Amenities__card-content">
+                  <h3>Shopping Center</h3>
+                </div>
+              </div>
+              <div class="card-Amenities__card">
+                <div class="card-Amenities__card-image">
+                  <img src="images/mos.svg" alt="Amenities-3">
+                </div>
+                <div class="card-Amenities__card-content">
+                  <h3>Mosque</h3>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
         <section class="navigated-sections__section--tab">
           <div class="container">
             <div class="row">
