--- a/index.html
+++ b/index.html
@@ -34,43 +34,42 @@
         </button>
         <button
           class="navigated-sections__nav-button"
-          data-target="project-materials   "
+          data-target="project-materials"
         >
           <span>project materials</span>
         </button>
         <button
           class="navigated-sections__nav-button"
-          data-target="interiors-and-exteriors"
+          data-target="project-interiors"
         >
           <span>interiors and exteriors</span>
         </button>
-        <button class="navigated-sections__nav-button" data-target="unit-types">
+        <button class="navigated-sections__nav-button" data-target="project-amenities">
+          <span>amenities</span>
+        </button>
+        <button class="navigated-sections__nav-button" data-target="tab">
           <span>unit types</span>
         </button>
-        <button
+        <!-- <button
           class="navigated-sections__nav-button"
           data-target="virtual-tours"
         >
           <span>virtual tours</span>
-        </button>
+        </button> -->
         <button
           class="navigated-sections__nav-button"
-          data-target="project-updates"
+          data-target="project-vedio"
         >
           <span>project updates</span>
         </button>
-        <button class="navigated-sections__nav-button" data-target="register">
+        <button class="navigated-sections__nav-button" data-target="contact">
           <span>register</span>
         </button>
       </div>
       <div class="navigated-sections__wrapper">
-        <section
-          class="navigated-sections__section navigated-sections__section--about"
-        >
+        <section class="navigated-sections__section navigated-sections__section--about">
           <div class="container">
-            <div
-              class="navigated-sections__section-content navigated-sections__section-content--about"
-            >
+            <div class="navigated-sections__section-content navigated-sections__section-content--about">
               <img
                 src="/images/about-logo.png"
                 alt="about"
@@ -107,9 +106,7 @@
             </div>
           </div>
         </section>
-        <section
-          class="navigated-sections__section navigated-sections__section--location"
-        >
+        <section class="navigated-sections__section navigated-sections__section--location">
           <!-- <div
             class="navigated_sections__section-content--location-overlay"
           ></div> -->
@@ -130,7 +127,7 @@
               <iframe
                 src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d13704.264891816243!2d31.340620416422993!3d30.078302639609635!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sar!2seg!4v1746533788856!5m2!1sar!2seg"
                 width="600"
-                height="600"
+                height="400"
                 style="border: 0"
                 allowfullscreen=""
                 loading="lazy"
@@ -327,7 +324,7 @@
             </div>
           </div>
         </section>
-        <section class="navigated-sections__section--project-materials">
+        <section class="navigated-sections__section navigated-sections__section--project-materials">
           <div class="container">
             <h2>Project Materials</h2>
             <div class="card-Amenities">
@@ -374,7 +371,182 @@
             </div>
           </div>
         </section>
-        <section class="navigated-sections__section--project-amenities">
+        <section class="navigated-sections__section navigated-sections__section--project-interiors">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-6">
+                <div class="project-interiors__image">
+                  <div class="swiper interiors-swiper">
+                    <div class="swiper-wrapper">
+                      <div class="swiper-slide">
+                        <img src="images/GS1EGykOBCL2IT2civtm5tUj4FSzuhcni7hfuBpu.jpg" alt="Project Interiors">
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="images/Zcpdlfb4KyWvA8ji1IVtmBei2gW0YLRlIiIZizTT.webp" alt="Project Interiors">
+                      </div>
+                    </div>
+                    <!-- Add Navigation -->
+                    <div class="interiors-swiper-button-next">
+                      <svg
+                      version="1.1"
+                      xmlns="http://www.w3.org/2000/svg"
+                      xmlns:xlink="http://www.w3.org/1999/xlink"
+                      x="0px"
+                      y="0px"
+                      viewBox="0 0 40.693 29.578"
+                      enable-background="new 0 0 40.693 29.578"
+                      xml:space="preserve"
+                      style="transform: scaleX(-1)"
+                    >
+                      <g id="Layer_4">
+                        <path
+                          fill="#FAC25A"
+                          d="M2.931,15.076c0.038,0.092,0.093,0.175,0.162,0.244l11.258,11.258c0.293,0.293,0.768,0.293,1.061,0s0.293-0.768,0-1.061l-9.978-9.978h31.635c0.414,0,0.75-0.336,0.75-0.75s-0.336-0.75-0.75-0.75H5.434l9.978-9.978c0.293-0.293,0.293-0.768,0-1.061c-0.146-0.146-0.338-0.22-0.53-0.22s-0.384,0.073-0.53,0.22L3.093,14.259c-0.069,0.069-0.124,0.152-0.162,0.244C2.855,14.686,2.855,14.892,2.931,15.076z"
+                        />
+                      </g>
+                    </svg>
+                    </div>
+                    <div class="interiors-swiper-button-prev">
+                      <svg
+                      version="1.1"
+                      xmlns="http://www.w3.org/2000/svg"
+                      xmlns:xlink="http://www.w3.org/1999/xlink"
+                      x="0px"
+                      y="0px"
+                      viewBox="0 0 40.693 29.578"
+                      enable-background="new 0 0 40.693 29.578"
+                      xml:space="preserve"
+                    >
+                      <g id="Layer_4">
+                        <path
+                          fill="#FAC25A"
+                          d="M2.931,15.076c0.038,0.092,0.093,0.175,0.162,0.244l11.258,11.258c0.293,0.293,0.768,0.293,1.061,0s0.293-0.768,0-1.061l-9.978-9.978h31.635c0.414,0,0.75-0.336,0.75-0.75s-0.336-0.75-0.75-0.75H5.434l9.978-9.978c0.293-0.293,0.293-0.768,0-1.061c-0.146-0.146-0.338-0.22-0.53-0.22s-0.384,0.073-0.53,0.22L3.093,14.259c-0.069,0.069-0.124,0.152-0.162,0.244C2.855,14.686,2.855,14.892,2.931,15.076z"
+                        />
+                      </g>
+                    </svg>
+                    </div>
+                  </div>
+                </div>
+                <div class="project-interiors__content">
+                  <h2>Exteriors</h3>
+                  <p>Montenapoleone compound embodies elegance with sleek Italian design, modern facades, and warm earth tones. The architecture seamlessly integrates lush greenery and open spaces, creating a tranquil environment. The framed elevations add a unique aesthetic charm through a harmonious balance of mass and void.</p>
+                  <h3>Each building features three sections:</h3>
+                  <ul>
+                    <li>
+                      <p>Basement</p>
+                    </li>
+                    <li>
+                      <p>Typical Floor</p>
+                    </li>
+                    <li>
+                      <p>Cap/Roof with a Rooftop Pool</p>
+                    </li>
+                  </ul>
+                  <p>Premium facades with double-glazed glass invite natural light and fresh air, blending nature with modern living. Every detail is crafted to deliver practical, high-quality lifestyles</p>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="project-interiors__image">
+                  <div class="swiper interiors2-swiper">
+                    <div class="swiper-wrapper">
+                      <div class="swiper-slide">
+                        <img src="images/4pcrY2kMyRI1r09J8dCgEpnCLhX16h8rb0l4lnN8.webp" alt="Project Interiors">
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="images/DruG70aRqqRvk6N6DdxLJBqwuBFDdeOfDKh55TjO.webp" alt="Project Interiors">
+                      </div>
+                    </div>
+                    <!-- Add Navigation -->
+                    <div class="interiors2-swiper-button-next">
+                      <svg
+                      version="1.1"
+                      xmlns="http://www.w3.org/2000/svg"
+                      xmlns:xlink="http://www.w3.org/1999/xlink"
+                      x="0px"
+                      y="0px"
+                      viewBox="0 0 40.693 29.578"
+                      enable-background="new 0 0 40.693 29.578"
+                      xml:space="preserve"
+                      style="transform: scaleX(-1)"
+                    >
+                      <g id="Layer_4">
+                        <path
+                          fill="#FAC25A"
+                          d="M2.931,15.076c0.038,0.092,0.093,0.175,0.162,0.244l11.258,11.258c0.293,0.293,0.768,0.293,1.061,0s0.293-0.768,0-1.061l-9.978-9.978h31.635c0.414,0,0.75-0.336,0.75-0.75s-0.336-0.75-0.75-0.75H5.434l9.978-9.978c0.293-0.293,0.293-0.768,0-1.061c-0.146-0.146-0.338-0.22-0.53-0.22s-0.384,0.073-0.53,0.22L3.093,14.259c-0.069,0.069-0.124,0.152-0.162,0.244C2.855,14.686,2.855,14.892,2.931,15.076z"
+                        />
+                      </g>
+                    </svg>
+                    </div>
+                    <div class="interiors2-swiper-button-prev">
+                      <svg
+                      version="1.1"
+                      xmlns="http://www.w3.org/2000/svg"
+                      xmlns:xlink="http://www.w3.org/1999/xlink"
+                      x="0px"
+                      y="0px"
+                      viewBox="0 0 40.693 29.578"
+                      enable-background="new 0 0 40.693 29.578"
+                      xml:space="preserve"
+                    >
+                      <g id="Layer_4">
+                        <path
+                          fill="#FAC25A"
+                          d="M2.931,15.076c0.038,0.092,0.093,0.175,0.162,0.244l11.258,11.258c0.293,0.293,0.768,0.293,1.061,0s0.293-0.768,0-1.061l-9.978-9.978h31.635c0.414,0,0.75-0.336,0.75-0.75s-0.336-0.75-0.75-0.75H5.434l9.978-9.978c0.293-0.293,0.293-0.768,0-1.061c-0.146-0.146-0.338-0.22-0.53-0.22s-0.384,0.073-0.53,0.22L3.093,14.259c-0.069,0.069-0.124,0.152-0.162,0.244C2.855,14.686,2.855,14.892,2.931,15.076z"
+                        />
+                      </g>
+                    </svg>
+                    </div>
+                  </div>
+                </div>
+                <div class="project-interiors__content">
+                  <h2>Interiors</h3>
+                  <p>Montenapoleone compound embodies elegance with sleek Italian design, modern facades, and warm earth tones. The architecture seamlessly integrates lush greenery and open spaces, creating a tranquil environment. The framed elevations add a unique aesthetic charm through a harmonious balance of mass and void.</p>
+                  <h3>Key features include:</h3>
+                  <ul>
+                    <li>
+                      <p>Kitchens: <span>Fully equipped with elegant cabinetry and scratch-resistant countertops, combining sleek design with durability to meet both style and practicality needs.</span></p>
+                    </li>
+                    <li>
+                      <p>Bathrooms: <span>Luxuriously finished with premium tiles, bathtubs, and showers, offering a relaxing and refined experience.</span></p>
+                    </li>
+                  </ul>
+                  <p>Whether designed for families or individuals, every corner of Montenapoleone reflects a commitment to comfort and sophistication, making it the ideal choice for those seeking a home that embodies both beauty and functionality.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <div class="">
+          <div class="logoMarqueeSection">
+              <div class="container" id="logoMarqueeSection">
+                <div class="default-content-container flex items-center">
+                  <div
+                    class="default-content-container-inner marquee-wrapper relative overflow-hidden inline-block"
+                  >
+                    <div class="marquee" style="animation-duration: 55s">
+                      <h2>Redefining Luxury</h2>
+                      <div class="marquee-dot"></div>
+                      <h2> Redefining Home</h2>
+                      <div class="marquee-dot"></div>
+                      <h2> Redefining Sanctuaries</h2>
+                      <div class="marquee-dot"></div>
+                      <h2> Redefining Experiences</h2>
+                    </div>
+                    <div class="marquee" style="animation-duration: 55s">
+                      <h2>Redefining Luxury</h2>
+                      <div class="marquee-dot"></div>
+                      <h2> Redefining Home</h2>
+                      <div class="marquee-dot"></div>
+                      <h2> Redefining Sanctuaries</h2>
+                      <div class="marquee-dot"></div>
+                      <h2> Redefining Experiences</h2>
+                    </div>
+                  </div>
+                </div>
+              </div>
+          </div>
+        </div>
+        <section class="navigated-sections__section navigated-sections__section--project-amenities">
           <div class="container">
             <h2>Amenities</h2>
             <div class="card-Amenities">
@@ -429,7 +601,7 @@
             </div>
           </div>
         </section>
-        <section class="navigated-sections__section--tab">
+        <section class="navigated-sections__section navigated-sections__section--tab">
           <div class="container">
             <div class="row">
 
@@ -665,7 +837,7 @@
             </div>
           </div>
         </section>
-        <section class="navigated-sections__section navigated-sections__section--project-materials">
+        <section class="navigated-sections__section navigated-sections__section--project-vedio">
           <div class="container">
             <div class="row">
               <div class="col-md-6">
@@ -704,7 +876,7 @@
             </div>
           </div>
         </section>
-        <section class="navigated-sections__contact">
+        <section class="navigated-sections__section navigated-sections__section--contact">
           <div class="navigated-sections__contact-info">
             <h2>Ready for a new living <span>Experience?</span></h2>
             <p>Register your interest now for more information</p>
