--- a/index.html
+++ b/index.html
@@ -24,6 +24,21 @@
     <title>test</title>
   </head>
   <body>
+    <div class="navbar">
+      <div class="container">
+        <div class="navbar__wrapper">
+          <div class="navbar__logo">
+            <img src="images/logo.svg" alt="logo">
+          </div>
+          <div class="navbar__contact">
+            <a href="tel:+201000000000">
+              <i class="fa-solid fa-phone"></i>
+              <span>+201000000000</span>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
     <section class="navigated-sections" id="navigated-sections">
       <div class="navigated-sections__nav">
         <button class="navigated-sections__nav-button" data-target="about">
@@ -951,12 +966,66 @@
         </section>
       </div>
     </section>
+
+    <div class="back-to-top">
+      <svg viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
+        <g>
+          <g>
+            <g>
+              <g>
+                <path d="m342.092 278.119h-166.271v-121.339h-72.023l155.097-156.78 149.308 156.78h-66.111zm-136.054-30.217h105.837v-121.339h25.823l-79.216-83.18-82.287 83.18h29.843z"></path>
+              </g>
+            </g>
+          </g>
+          <g>
+            <g>
+              <g>
+                <path d="m173.008 447.144h30.217v30.217h-30.217z"></path>
+              </g>
+            </g>
+            <g>
+              <g>
+                <path d="m173.008 321.666h30.217v95.136h-30.217z"></path>
+              </g>
+            </g>
+            <g>
+              <g>
+                <path d="m311.875 447.144h30.217v30.217h-30.217z"></path>
+              </g>
+            </g>
+            <g>
+              <g>
+                <path d="m311.875 321.666h30.217v95.136h-30.217z"></path>
+              </g>
+            </g>
+            <g>
+              <g>
+                <g>
+                  <path d="m242.442 371.761h30.217v140.239h-30.217z"></path>
+                </g>
+              </g>
+            </g>
+          </g>
+        </g>
+      </svg>
+    </div>
+
+    <div class="social-media-icons">
+      <a href="#" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+      <a href="#" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
+      <a href="#" target="_blank"><i class="fa-brands fa-youtube"></i></a>
+      <a href="#" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+      <a href="#" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+    </div>
+
     <!-- Swiper JS -->
     <script src="js/bootstrap.min.js"></script>
     <script src="js/swiper-bundle.min.js"></script>
     <!-- Bootstrap Bundle JS (includes Popper) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Modal Structure -->
+
+    <!-- Video Modal -->
     <div id="videoModal" class="modal-video">
       <div class="modal-content">
         <span class="close-modal" id="closeVideoModal">&times;</span>
